# rinha-backend-2025

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-ec2  Dockerfile-skylake  README.md
include/: raw_http_client.h
infra/: docker-compose-haproxy.yml  docker-compose-server.yml  docker-compose.yml  haproxy-log.cfg  haproxy-single.cfg  haproxy.cfg  nginx.conf  rinha.js
src/: main.cpp  raw_http_client.cpp
